--- a/styles/website.css
+++ b/styles/website.css
@@ -1,76 +1,87 @@
-h1 , h2{
-    border-bottom: 1px solid #EFEAEA;
-    padding-bottom: 3px;
-}
-.markdown-section>:first-child {
-    margin-top: 0!important;
-}
-.page-wrapper {
-    margin-top: -1.275em;
-}
-.book .book-body .page-wrapper .page-inner section.normal {
-    min-height:350px;
-    margin-bottom: 30px;
+.sk-folding-cube {
+  margin: 20px auto;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
 }
 
-.book .book-body .page-wrapper .page-inner section.normal hr {
-    height: 0px;
-    padding: 0;
-    margin: 0 0;
-    /* margin: 1.7em 0; */
-    overflow: hidden;
-    background-color: #e7e7e7;
-    border-bottom: 1px dotted #e7e7e7;
+.sk-folding-cube .sk-cube {
+  float: left;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1); 
+}
+.sk-folding-cube .sk-cube:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+          animation: sk-foldCubeAngle 2.4s infinite linear both;
+  -webkit-transform-origin: 100% 100%;
+      -ms-transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
+}
+.sk-folding-cube .sk-cube2 {
+  -webkit-transform: scale(1.1) rotateZ(90deg);
+          transform: scale(1.1) rotateZ(90deg);
+}
+.sk-folding-cube .sk-cube3 {
+  -webkit-transform: scale(1.1) rotateZ(180deg);
+          transform: scale(1.1) rotateZ(180deg);
+}
+.sk-folding-cube .sk-cube4 {
+  -webkit-transform: scale(1.1) rotateZ(270deg);
+          transform: scale(1.1) rotateZ(270deg);
+}
+.sk-folding-cube .sk-cube2:before {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+.sk-folding-cube .sk-cube3:before {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s; 
+}
+.sk-folding-cube .sk-cube4:before {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+@-webkit-keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+            transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+            transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+            transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  } 
 }
 
-.video-js {
-    width:100%;
-    height: 100%;
-}
-
-pre[class*="language-"] {
-    border: none;
-    background-color: #f7f7f7;
-    font-size: 1em;
-    line-height: 1.2em;
-}
-
-.book .book-body .page-wrapper .page-inner section.normal {
-    font-size: 16px;
-    font-family:  "ubuntu", "Tahoma", "Microsoft YaHei", arial, sans-serif;
-}
-
-.aceCode {
-  font-size: 14px !important;
-}
-
-input[type=checkbox]{
-    margin-left: -2em;
-}
-
-.page-footer span{
-    font-size: 12px;
-}
-
-.page-footer .copyright {
-    float: left;
-}
-
-.body, html {
-    overflow-y: hidden;
-}
-
-.versions-select select {
-    height: 2em;
-    line-height: 2em;
-    border-radius: 4px;
-    background: #efefef;
-}
-
-.gitbook-link {
-    display: none !important;
-}
-
-h1 {
-    margin-top: 0 !important;
+@keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+            transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+            transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+            transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  }
 }
