--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -79,3 +79,13 @@ h1 {
   margin-top: 0px !important;
   color: #116EC5;
 }
+
+h3 {
+  page-break-before: auto !important;
+  page-break-after: avoid !important;
+}
+
+h4 {
+  page-break-before: auto !important;
+  page-break-after: avoid !important;
+}
