--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -17,10 +17,9 @@ h1 , h2{
 .book .book-body .page-wrapper .page-inner section.normal hr {
   height: 0px;
   padding: 0;
-  margin: 0 0;
+  margin: 0 0 !important;
   overflow: hidden;
-  background-color: #e7e7e7;
-  border-bottom: 1px dotted #e7e7e7;
+  border-bottom: 1px dotted #e7e7e7 !important;
 }
 
 .video-js {
@@ -37,7 +36,7 @@ pre[class*="language-"] {
 
 .book .book-body .page-wrapper .page-inner section.normal {
   font-size: 16px;
-  font-family:  "ubuntu", "Tahoma", "Microsoft YaHei", arial, sans-serif;
+  font-family:  "Arial", "Tahoma", "Microsoft YaHei", arial, sans-serif;
 }
 
 .aceCode {
